# onegin

./: .gitignore  .gitmodules  README.md  meson.build
include/: onegin.h
include/istd/: arg.h  except.h  utf8.h
include/istd/_impl/: arg.h
src/: main.c  meson.build
src/istd/: except.c  utf8.c
src/istd/arg/: arg.c  help.c
src/onegin/: gen.c  io.c  lines.c  misc.c  sort.c
test/: meson.build  test_setup.c
